# tower-defense-big-w

./: .mise.toml  Cargo.toml  README.md  rustfmt.toml  todo.md
.cursor/rules/: basics.mdc  testing.mdc
.github/workflows/: check.yml
assets/audio/: README.md
assets/audio/sfx/: .gitkeep
assets/shaders/: explosion.wgsl  impact.wgsl  projectile.wgsl  trail.wgsl
docs/: modeling.md
src/: components.rs  constants.rs  events.rs  lib.rs  main.rs  materials.rs  random_policy.rs  setup.rs  splash.rs
src/audio/: mod.rs  util.rs
src/audio/sfx/: mod.rs  player_footstep_01.rs  tower_bow_release.rs  tower_crossbow_release.rs  tower_place.rs  tower_place_invalid.rs  tower_sell.rs  tower_upgrade.rs  wave_start.rs  wave_start_boss.rs
src/components/: chunks.rs  enemies.rs  harvesting.rs  mod.rs  player.rs  render.rs  roads.rs  state.rs  towers.rs  town.rs  upgrade_config.rs  upgrades.rs  waves.rs
src/core/: geometry.rs  grid.rs  mod.rs  paths.rs  rng.rs  world.rs
src/entities/: mod.rs
src/systems/: camera.rs  chunks.rs  combat.rs  input.rs  mod.rs  movement.rs  tree_collection.rs  ui.rs  waves.rs  window.rs  world.rs
src/systems/combat/: assets.rs  enemy.rs  mod.rs  projectiles.rs  towers.rs
src/systems/resource_passes/: mod.rs  resource_rules.rs  rocks_along_road.rs  town_square_exclusion.rs
src/systems/ui/: collect_bar.rs  hud.rs  mod.rs  observers.rs  tower_drawer.rs  warmup.rs
src/ui/: palette.rs
src/utils/: camera.rs
src/waves/: dsl.rs  mod.rs  rules.rs
tests/: audio.rs  chunks_world.rs  components.rs  constants.rs  enemy_health_bar.rs  enemy_health_bar_more.rs  math_utils.rs  random_policy.rs  rocks_pass.rs  spatialize.rs  wave_progression.rs  waves.rs
tests/support/: mod.rs
