[package]
name = "td"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "=0.9.2"

[dependencies.bevy]
version = "=0.17.2"
features = [
    "bevy_dev_tools",
    "bevy_ui_debug",
    "experimental_bevy_ui_widgets",
    "flac",
    "jpeg",
    "mp3",
    "reflect_documentation",
    "symphonia-all",
    "tiff",
    "trace",
    "trace_chrome",
    "wav",
    "webp",
    "zlib",
]